# LiOAvLZ-Lab1

./: CMakeLists.txt  README.md  Report_1.docx
include/: flheaders.hpp  list.hpp
src/: array_operations.cpp  main.cpp  utilities.cpp
